--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -59,8 +59,10 @@ layout: default
   }
 </style>
 
-<!-- <div class="hero-section">
-</div> -->
+<div class="hero-section">
+    <h1>Welcome</h1>
+    <p>Under construction</p>
+</div>
 
 <div class="home">
 
