--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,6 +11,7 @@ layout: default
   .post-list-home {
     list-style: none;
     padding: 0;
+    margin-left: 0;
   }
   .post-list-home li {
     background-color: #fff;
