--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,7 +21,7 @@ layout: default
     margin-bottom: 0;
   }
   .page-content {
-    /*font-size: 1.1em;*/
+    font-size: 1.1em;
     line-height: 1.7;
     color: #333;
   }
