--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -61,8 +61,8 @@ layout: default
 </style>
 
 <div class="hero-section">
-    <h1>Welcome</h1>
-    <p>Under construction</p>
+  <img src="{{ '/assets/banner-1557881_1280.jpg' | relative_url }}" alt="Logo" style="max-width: 700px; margin-bottom: 20px;">
+  <p style="font-size: 1.5em; margin-bottom: 20px;">Under construction</p>
 </div>
 
 <div class="home">
