--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -60,8 +60,7 @@ layout: default
   }
 </style>
 
-<div class="hero-section">
-  <img src="{{ '/assets/banner-1557881_1280.jpg' | relative_url }}" alt="Logo" style="max-width: 700px; margin-bottom: 20px;">
+<div class="hero-section" style="background-image: url('{{ \'/assets/banner.png\' | relative_url }}'); background-size: cover; background-position: center; color: #fff;">
   <p style="font-size: 1.5em; margin-bottom: 20px;">Under construction</p>
 </div>
 
