--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -60,7 +60,7 @@ layout: default
   }
 </style>
 
-<div class="hero-section" style="background-image: url('{{ \'/assets/banner.png\' | relative_url }}'); background-size: cover; background-position: center; color: #fff;">
+<div class="hero-section" style="background-image: url('{{ '/assets/banner.png' | relative_url }}'); background-size: cover; background-position: center; color: #fff;">
   <p style="font-size: 1.5em; margin-bottom: 20px;">Under construction</p>
 </div>
 
