--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,10 +13,12 @@ layout: default
   .hero-section h1 {
     font-size: 3em;
     margin-bottom: 20px;
+    color: #ffffff;
   }
   .hero-section p {
     font-size: 1.2em;
-    color: #6c757d;
+    /*color: #6c757d;*/
+    color: #ffffff;
   }
   .cta-button {
     display: inline-block;
@@ -61,7 +63,8 @@ layout: default
 </style>
 
 <div class="hero-section" style="background-image: url('{{ '/assets/banner.png' | relative_url }}'); background-size: cover; background-position: center; color: #fff;">
-  <p style="font-size: 1.5em; margin-bottom: 20px;">Under construction</p>
+  <h1>Welcome</h1>
+  <p>under construction</p>
 </div>
 
 <div class="home">
