--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,8 @@ layout: default
     color: #ffffff;
   }
   .hero-section p {
-    font-size: 1.2em;
+    /* font-size: 1.2em; */
+    font-size: 1.5em;
     /*color: #6c757d;*/
     color: #ffffff;
   }
