--- a/_layouts/blog2.html
+++ b/_layouts/blog2.html
@@ -3,6 +3,53 @@ layout: default
 ---
 
 <style>
+.hero-section {
+  padding: 50px 20px;
+  margin-bottom: 2.5rem;
+  border-radius: 8px;
+  
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  text-align: center;
+}
+
+.section {
+  padding: 2.5rem 0;
+}
+
+.section-title {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 1.75em; 
+}
+
+.post-list-home {
+  list-style: none;
+  padding: 0;
+  margin-left: 0;
+}
+
+.post-list-home li {
+  padding: 1.25rem 0;
+  margin-bottom: 0;
+
+  border-bottom: 1px solid #eee; 
+}
+
+.post-list-home li:last-child {
+  border-bottom: none;
+}
+
+.post-list-home .post-link {
+  font-size: 1.25em;
+}
+
+.all-posts-link {
+  text-align: center;
+  margin-top: 2rem;
+}
+
 .blog-listing {
   padding: 2.5rem 0;
 }
@@ -53,7 +100,7 @@ layout: default
 <div class="section blog-listing">
   <h2 class="section-title">{{ page.title | escape }}</h2>
 
-  <ul class="post-list-home"> {# Reusing this class for consistency #}
+  <ul class="post-list-home">
     {% for post in site.posts %}
       <li>
         <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
