--- a/_layouts/home2.html
+++ b/_layouts/home2.html
@@ -41,8 +41,11 @@ layout: default
   border-bottom: none;
 }
 
-.post-list-home .post-link {
+.post-link {
+  text-decoration: none;
   font-size: 1.25em;
+  font-weight: bold;
+  display: block;
 }
 
 .all-posts-link {
