--- a/_layouts/post2.html
+++ b/_layouts/post2.html
@@ -41,8 +41,11 @@ layout: default
   border-bottom: none;
 }
 
-.post-list-home .post-link {
+.post-link {
+  text-decoration: none;
   font-size: 1.25em;
+  font-weight: bold;
+  display: block;
 }
 
 .all-posts-link {
@@ -81,14 +84,6 @@ layout: default
   font-size: 0.9em;
   display: block;
   margin-bottom: 0.5rem;
-}
-
-.blog-listing .post-link {
-  text-decoration: none;
-  color: #333;
-  font-size: 1.25em;
-  font-weight: bold;
-  display: block;
 }
 
 .blog-listing .post-excerpt {
