--- a/_layouts/page2.html
+++ b/_layouts/page2.html
@@ -4,7 +4,7 @@ layout: default
 
 <style>
 .page-header {
-  text-align: center;
+  text-align: left;
   margin-bottom: 2rem;
   padding-bottom: 1.5rem;
   border-bottom: 1px solid #eee;
