--- a/_layouts/post2.html
+++ b/_layouts/post2.html
@@ -93,7 +93,7 @@ layout: default
 }
 
 .post-header {
-  text-align: center;
+  text-align: left;
   margin-bottom: 2rem;
   padding-bottom: 2rem;
   border-bottom: 1px solid #eee;
